# Foresite

./: .gitignore  LICENSE  README.md  munging.py  pyproject.toml  setup.cfg
analyses/: accola.ipynb  create_files_test.py  ebilsland.ipynb  munging.py  raccoon-watershed.ipynb  run_apsim.py  spec-file.txt
analyses/accola/: accola.ipynb  accola_maize.ipynb  accola_maize_2019_stats.geojson  accola_twi.ipynb
analyses/crop_jsons/: accola_cfs_2019.json  accola_sfc_2018.json  cc.json  cfs.json  ebilsland_sfc_2019.json  maize.json  sfc.json  soybean.json
analyses/ebilsland/: ebilsland.ipynb  (+1 more)
apsim/: apsim_emulator_writer.py  apsim_input_writer.py  apsim_output_parser.py  config.py  database.py  daymet.py  generate_input_files.py  mgmt_example.toml  op_manager.py  run_apsim.py  soils.py  ssurgo.py  test.ipynb  weather.py  wrapper.py
budgets/: bdgt_database.py  budget_calcs.py  cas_south_ops.json  test.ipynb
cdl/: add_raster_constraints.sql
clu/: clu_import.sql
documention/: conversions.md  foresite_documentation.Rmd  foresite_documentation.docx  foresite_documentation.html  geospatial_data_processing.md  ogr2ogr-commands.txt
geospatial/: eros_api_demo.ipynb  sentinel.ipynb  sentinel2.ipynb
intersections/: clu_ssurgo_intersection.sql
notebooks/: nasapower.ipynb
psql_library/: area_as_acres.sql  boone_ssurgo_2019.sql  county_names.sql  huc12_fields.sql  huc12_inputs.sql  huc12_soils.sql  jasper_ssurgo_2019.sql  raccoon_clu_ssurgo.sql
ritas/: format_ym.py
tests/: apsim_test.py  apsimtest.py  budget_test.py
vanloocke/: raccoon_clu.sql  raccoon_rots.sql
(+81 files in other folders)
