[metadata]
name = Foresite
author = Matt Nowatzke
author_email = mnowatz@iastate.edu
url = https://github.com/isuforesite/Foresite
keywords = APSIM
license = Apache
license-file = LICENSE
description = APSIM proctor and data management library.
description-file = README.md

[pep8]
# black conflicts with pep8 E203
ignore = W503,E203

[flake8]
ignore = W503,E203

[aliases]
test = pytest

[tool:pytest]
log_level = INFO
markers =
    mpl_image_compare

[options]
include_package_data = True
package_dir =
    = src
packages = find:
setup_requires = setuptools_scm
install_requires =
    geopandas

[options.packages.find]
where = src

